force-app/main/default/objects/Theme_Park_Admission__c/Theme_Park_Admission__c.object-meta.xml
<CustomObject>
    <label>Theme Park Admission</label>
    <nameField>
        <displayFormat>TPA-{000000}</displayFormat>
        <label>ThemePark Admission</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Park Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>