force-app/main/default/objects/Theme_Park_Admission__c/fields/Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account/Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Games_Events</relationshipName>
    <type>Lookup</type>
</CustomField>