force-app/main/default/objects/Theme_Park_Admission__c/fields/Game_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Game_Event_Date__c</fullName>
    <label>Game/Event Date</label>
    <type>Date</type>
</CustomField>