force-app/main/default/objects/Theme_Park_Admission__c/fields/Game_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Event_Type__c</fullName>
    <label>Game/Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>