force-app/main/default/objects/Theme_Park_Admission__c/fields/Game_Win_Lose_Score__c.field-meta.xml
<CustomField>
    <fullName>Game_Win_Lose_Score__c</fullName>
    <label>Game</label>
    <length>255</length>
    <type>Text</type>
</CustomField>