force-app/main/default/objects/Theme_Park_Admission__c/fields/GL_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>GL_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Games_Events</relationshipName>
    <type>Lookup</type>
</CustomField>