force-app/main/default/objects/Theme_Park_Admission__c/fields/Opponent__c.field-meta.xml
<CustomField>
    <fullName>Opponent__c</fullName>
    <label>Opponent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>