force-app/main/default/objects/Theme_Park_Admission__c/fields/Opponent_Win_Lose_Tie__c.field-meta.xml
<CustomField>
    <fullName>Opponent_Win_Lose_Tie__c</fullName>
    <label>Opponent Win_Lose_Tie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>